<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:background="#B0E2FF">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:text="@string/login_user"
            android:textSize="16dp"/>
        
        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user"
            android:hint="@string/login_hint_user"
            />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_user"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/login_password"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_password"
            android:hint="@string/login_hint_password"/>

        <CheckBox
            android:id="@+id/ckb_keepPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_password"
            android:layout_below="@id/et_password"
            android:text="@string/login_keepPassword"/>

        <CheckBox
            android:id="@+id/ckb_autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_toRightOf="@id/ckb_keepPassword"
            android:layout_marginLeft="10dp"
            android:text="@string/login_autoLogin"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ckb_keepPassword"
            android:background="#fff"
            android:text="@string/login_login"
            android:textSize="16dp"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:text="@string/login_register"
            android:textSize="16dp"
            />
    </RelativeLayout>
</RelativeLayout>

