<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bottom_bg">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/bottom_home_on"/>
        <TextView
            android:id="@+id/tv_home"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bottom_btn_home"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_course"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_course"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/bottom_course" />

        <TextView
            android:id="@+id/tv_course"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bottom_btn_course"
            android:textSize="12sp"
            android:textColor="#999"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/bottom_user"/>
        <TextView
            android:id="@+id/tv_user"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bottom_btn_user"
            android:textSize="12sp"
            android:textColor="#999"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
